--- a/main.html
+++ b/main.html
@@ -1,16 +1,70 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
-	<link rel="stylesheet" href="styles.css">
+<link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
+<!-- the entire body must be written by student -->
+<header><h1>3 Idiots</h1></header>
+<nav>
+<a href="#actor" id="nav-actor"><b>Actors</b></a>
+<a href="#quote" id="nav-quote"><b>Quotes</b></a>
+</nav><br>
+<summary>
+<b>In college, Farhan and Raju form a great bond with Rancho due 
+to his refreshing outlook.Years later, a bet gives them a 
+chance to look for their long-lost friend whose existence 
+seems rather elusive.
+<br><br>
+Hindi Translation:
+<br>
+कॉलेज में, फरहान और राजू, रैंचो के ताज़ा दृष्टिकोण की वजह से उसके साथ एक
+अच्छा बंधन विकसित करते है।सालो बाद,एक शर्त उन्हें अपने लंबे समय से खोये
+हुए दोस्त को मिलने का मौका देती है।
+</b>
+</summary>
+<br>
+<section id="actor">
+<h2>Actors:</h2>
+<ul>
+<li>Aamir Khan as Ranchhoddas <b>"Rancho"</b> Shyamaldas Chanchad</li>
+<li>R. Madhavan as Farhan Qureshi</li>
+<li>Sharman Joshi as Raju Rastogi</li>
+<li>Kareena Kapoor as Pia Sahastrabuddhe, a successful doctor and Rancho’s love interest</li>
+<li>Boman Irani as Dr. Viru <b>"Virus"</b> Sahastrabuddhe</li>
+<li>Omi Vaidya as Chatur <b>"Silencer"</b> Ramalingam</li>
+</ul>
+</section>
+<section id="quote">
+<h2>Popular Quotes:</h2>
+<ul>
+<li> Life is a race … 
+If you don’t run fast… 
+you will be like a broken andaa…</li>
+<li>
+Thode din idhar rahega toh apne aap 
+Bhagwan se vishwaas uth jayega.
+Phir bajoo mein nangi ladkiyon 
+ki tasveerein lagayega aur bolega
+: Oh God! Ek Baar Dila De…”
+</li>
+<li> Jahanpanah! Tussi great ho…Tohfa kabool karo!</li>
+<li> Dost fail ho jaye toh dukh hota hai … 
+Lekin dost first aa jaye toh zyaada dukh hota hai</li>
+<li>Kaamyaab hone ke liye nahin, Kaabil hone ke liye padho!</li>
+<li>All Izz Well…</li>
+</ul>
+</section>
+<aside>
+<h2>Review:</h2>
+<b>IMDB Rating: 8.4/10</b><br>
+<b>Release Date: 25 December 2009</b>
+</aside>
+<footer>
+<h2>Production:</h2>
+<b>Produced by: Vidhu Vinod Chopra</b>
+</footer>
+<script type="text/javascript" src="./script.js">
 </script>
-
 </body>
-
 </html>
