--- a/main.html
+++ b/main.html
@@ -11,17 +11,14 @@
 <a href="#quote" id="nav-quote"><b>Quotes</b></a>
 </nav><br>
 <summary>
-<b>In college, Farhan and Raju form a great bond with Rancho due 
-to his refreshing outlook.Years later, a bet gives them a 
-chance to look for their long-lost friend whose existence 
-seems rather elusive.
-<br><br>
-Hindi Translation:
-<br>
-कॉलेज में, फरहान और राजू, रैंचो के ताज़ा दृष्टिकोण की वजह से उसके साथ एक
-अच्छा बंधन विकसित करते है।सालो बाद,एक शर्त उन्हें अपने लंबे समय से खोये
-हुए दोस्त को मिलने का मौका देती है।
-</b>
+In their first year of college, students Farhan Qureshi and Raju Rastogi
+join the prestigious Imperial College of Engineering (ICE) in Delhi and meet
+Ranchhoddas Shamaldas Chanchad aka Rancho, their roommate, who is passionate
+about experimenting with different things, and consequently tops the class.
+Rancho's carefree approach to education results in him being at odds with
+the college's director, Dr. Viru Sahastrabuddhe
+(nicknamed "Virus" by the students),who believes in a strict and 
+competitive education system.
 </summary>
 <br>
 <section id="actor">
