--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 <a href="#actor" id="nav-actor"><b>Actors</b></a>
 <a href="#quote" id="nav-quote"><b>Quotes</b></a>
 </nav><br>
-<summary>
+<summary><h2>Summary:</h2>
 In their first year of college, students Farhan Qureshi and Raju Rastogi
 join the prestigious Imperial College of Engineering (ICE) in Delhi and meet
 Ranchhoddas Shamaldas Chanchad aka Rancho, their roommate, who is passionate
